source/teacher/.dart_tool/build/generated/angular_test/lib/src/errors/will_never_stabilize.template.dart
// **************************************************************************
// Generator: AngularDart Compiler
// **************************************************************************

import 'will_never_stabilize.dart';
export 'will_never_stabilize.dart';

// No initReflector() linking required.
void initReflector() {}
